objects/Package__c.object
<CustomObject>
    <description>Information on an option or package for a specific make, model, and year.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Either a description of the option, or a listing of the package components.</description>
        <inlineHelpText>Enter each component of the package on separate lines, or a description of of the option. May be omitted.</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <description>The manufacturer.</description>
        <inlineHelpText>e.g. Honda, Ford, Toyota, Chevrolet</inlineHelpText>
        <label>Make</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>The model of the car.</description>
        <label>Model</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>